--- a/locales/ar.json
+++ b/locales/ar.json
@@ -91,6 +91,10 @@
   "Tapes / Pavings": "شرائط / تغليف",
   "Key Rings": "سلاسل مفاتيح",
   "Under gloves": "قفازات داخلية",
-  "Online goalkeeper training": "تدريب حارس المرمى عبر الإنترنت"
+  "Online goalkeeper training": "تدريب حارس المرمى عبر الإنترنت",
+  "TOP BRANDS,LATEST MODELS":"أفضل العلامات التجارية، أحدث الموديلات",
+  "Gloves Collection": "مجموعة القفازات",
+  "Studs Collection": "مجموعة المسامير",
+  "Training aids collection": "مجموعة أدوات التدريب"
   }
   
