--- a/locales/en.json
+++ b/locales/en.json
@@ -90,6 +90,10 @@
   "Tapes / Pavings": "Tapes / Pavings",
   "Key Rings": "Key Rings",
   "Under gloves": "Under gloves",
-  "Online goalkeeper training": "Online goalkeeper training"
+  "Online goalkeeper training": "Online goalkeeper training",
+  "TOP BRANDS,LATEST MODELS":"TOP BRANDS,LATEST MODELS",
+  "Gloves Collection": "Gloves Collection",
+  "Studs Collection": "Studs Collection",
+  "Training aids collection": "Training aids collection"
 
 }
